--- a/src/pages/users/Datalist.css
+++ b/src/pages/users/Datalist.css
@@ -25,8 +25,8 @@
 position: absolute;
 width: 90px;
 height: 90px;
-top: 0%;
-left: 80%;  /*standart undo*/
+top: 3.5%;
+left: 85%;  /*standart undo*/
 padding: 10px;
 
 }
@@ -34,8 +34,8 @@ padding: 10px;
     display: flex;
     position: absolute;
     flex-direction: column;
-    border: 1px solid black;
-    top: 150px;
+    border: 1px solid white;
+    top: 160px;
     right: 180px;
     background-color: #A8CFD4;
     border-radius: 30px 30px 30px 0px;
@@ -47,20 +47,42 @@ padding: 10px;
     padding-top: 5px;
     display: flex;
     justify-content: center;
+    font-family: 'IBM Plex Sans Thai', sans-serif;
     
+}
+.course_name{
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+    position: absolute;
+    left: 250px;
+    top: 120px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .datalist_data{
     display: flex;
     flex-direction: column;
    /* top: 450px; */
+    top:450px;
     width: 80%;
     left: 80px;
     position: absolute;
-    justify-content: center;
     border:1px solid blue;
     border-radius: 30px 30px 30px 30px;
-    font-size: 500px;
+    font-size: 20px;
+    background-color: #CFE6CA;
+    height: 80%;
+}
+.datalist_count{
+    display: flex;
+    flex-direction: row;
+   
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+    font-weight: bold;
+    font-size: 30px;
+    border: 1px solid black;
+    border-radius: 30px 30px 30px 30px;
+    
     
 }
 
